--- a/GleitZeitRechner/res/values/strings.xml
+++ b/GleitZeitRechner/res/values/strings.xml
@@ -24,7 +24,9 @@
     <string name="title_activity_time_line">TimeLineActivity</string>
     <string name="save">Speichern</string>
     <string name="delete">Löschen</string>
-    <string name="weekTime">Wochenarbeitszeit :</string>
-    <string name="zeitWoche"></string>
+    
+    <!-- TimeLine Activity -->
+    <string name="wochenZeitS">Wochenarbeitszeit = </string>
+    <string name="weekTimeS"></string>
 
 </resources>
